Enhance Java 17 uplift agent with comprehensive migration playbook and Gradle support
Co-authored-by: raunak220191 <90885744+raunak220191@users.noreply.github.com>